src/objects/WorkOrder.object
<CustomObject>
    <fields>
        <fullName>AMPPower__c</fullName>
        <label>AMPPower</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcceptancePerson__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>验收人</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AcceptancePerson</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcceptanceTime__c</fullName>
        <label>验收时间</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <formula>Account.address__c</formula>
        <label>地址</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>金额</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ArrivalTime__c</fullName>
        <formula>Case.RequestTime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>到达时间：</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bar1__c</fullName>
        <label>最终初级气压（Bar）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bar__c</fullName>
        <label>初始初级气压（Bar）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CellPhone__c</fullName>
        <formula>Contact.phone__c</formula>
        <label>手机</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactNumber__c</fullName>
        <formula>Case.ContactNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>联系电话</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactPerson__c</fullName>
        <formula>Case.Contacts11__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>相关联系人</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeviceErrorMessage__c</fullName>
        <label>设备报错信息</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Down1__c</fullName>
        <label>Down机天数（天）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>工程师</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Engineer112</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EquipmentName__c</fullName>
        <formula>Case.Equipment__r.Name</formula>
        <label>设备名称</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__IsFillInCandidate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Fill In Candidate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Prevent_Geocoding_For_Chatter_Actions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prevent Geocoding For Chatter Actions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Scheduling_Priority__c</fullName>
        <formula>CASE(TEXT(Priority), &apos;Critical&apos; , 1 ,&apos;High&apos; ,2,&apos;Medium&apos; ,3 , &apos;Low&apos;, 4, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduling Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__VisitingHours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visiting Hours</label>
        <referenceTo>OperatingHours</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FailureDate__c</fullName>
        <formula>Case.FailureDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>出现故障日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FaultCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>故障类别</label>
        <referenceTo>faultcategory__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>FaultCategory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinishDate__c</fullName>
        <formula>Case.CompletionDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>完成日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HEnm__c</fullName>
        <label>初始能量测试HE（nm）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HFmj1__c</fullName>
        <label>最终能量测试HF（mj）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HFmj__c</fullName>
        <label>初始能量测试HF（mj）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HVV1__c</fullName>
        <label>最终能量测试HV（V</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HVV__c</fullName>
        <label>初始能量测试HV（V）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HoursOfWork__c</fullName>
        <label>工作小时数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HumidityDP__c</fullName>
        <label>Humidity DP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IRpower__c</fullName>
        <label>IR power</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InmarsatSerialNumber__c</fullName>
        <formula>Case.DeviseSerialNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>设备序列号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InstallationDate__c</fullName>
        <formula>Case.Equipment__r.installationdate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>安装日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LE_nm__c</fullName>
        <label>初始能量测试LE（nm）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LEnm__c</fullName>
        <label>最终能量测试LE（nm）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LFmj1__c</fullName>
        <label>最终能量测试LF（mj）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LFmj__c</fullName>
        <label>初始能量测试LF（mj）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M1__c</fullName>
        <label>最终激光腔脉冲数（M）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M22__c</fullName>
        <label>初始激光腔脉冲数（M）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NotRepaired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>未修好</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <formula>Account.postcode__c</formula>
        <label>邮政编码</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RepairTime__c</fullName>
        <label>报修时间</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Repaired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>已修好</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RequestName__c</fullName>
        <formula>Case.RequestName__c</formula>
        <label>请求名称</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResponsibleDepartment__c</fullName>
        <formula>text(Contact.department__c)</formula>
        <label>负责科室</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIS__c</fullName>
        <label>SIS No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceValue__c</fullName>
        <label>服务价值（元)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>9,980</fullName>
                </value>
                <value>
                    <fullName>21,980</fullName>
                </value>
                <value>
                    <fullName>39,980</fullName>
                </value>
                <value>
                    <fullName>49,980</fullName>
                </value>
                <value>
                    <fullName>59,980</fullName>
                </value>
                <value>
                    <fullName>8,000</fullName>
                </value>
                <value>
                    <fullName>70,000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Servicelevel__c</fullName>
        <label>服务级别</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>巡检</fullName>
                </value>
                <value>
                    <fullName>基础服务</fullName>
                </value>
                <value>
                    <fullName>初级维修维护</fullName>
                </value>
                <value>
                    <fullName>中级维修维护</fullName>
                </value>
                <value>
                    <fullName>高级维修维护</fullName>
                </value>
                <value>
                    <fullName>特级维修维护</fullName>
                </value>
                <value>
                    <fullName>检查设备维护</fullName>
                </value>
                <value>
                    <fullName>移机安装</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ThewarrantyDate__c</fullName>
        <formula>Case.WarrantyExpirationDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>保修日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TravelDays__c</fullName>
        <label>出差天数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UnitAddress__c</fullName>
        <formula>Account.address__c</formula>
        <label>单位地址</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitType__c</fullName>
        <formula>Case.EquipmentModel__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>设备型号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UseDepartment__c</fullName>
        <formula>Case.UseDepartment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>使用科室</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>派工单</label>
        <referenceTo>ServiceAppointment</referenceTo>
        <relationshipLabel>工作订单</relationshipLabel>
        <relationshipName>PGD92de</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WorkTelephone__c</fullName>
        <formula>Account.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>单位电话</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1000V__c</fullName>
        <label>初始最大能量1000V(Mlase)1400v(EXSO)10s下（mj）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1000v1__c</fullName>
        <label>最终最大能量1000v(Mlase）1400v（EXSO)10s下（mj）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZipCode__c</fullName>
        <formula>Account.postcode__c</formula>
        <label>邮编</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chilleraterflow__c</fullName>
        <label>ChillerWaterFlow</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fwqk__c</fullName>
        <label>本次收费服务情况</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>保修内免费</fullName>
                </value>
                <value>
                    <fullName>保修外免费</fullName>
                </value>
                <value>
                    <fullName>单次付费</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>housingtemperature__c</fullName>
        <label>Housing Temperature</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mBar__c</fullName>
        <label>初始次级气压（mBar）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>opinion__c</fullName>
        <label>意见</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>solution__c</fullName>
        <label>解决方案</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>状态</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>进行中</fullName>
                </value>
                <value>
                    <fullName>未开始</fullName>
                </value>
                <value>
                    <fullName>关闭</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>temperatureDP__c</fullName>
        <label>temperatureDP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_WorkOrders</fullName>
        <filterScope>Everything</filterScope>
        <label>All Work Orders</label>
    </listViews>
    <listViews>
        <fullName>My_WorkOrders</fullName>
        <filterScope>Mine</filterScope>
        <label>My Work Orders</label>
    </listViews>
    <recordTypes>
        <fullName>RecordType</fullName>
        <active>true</active>
        <label>产品培训卡</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordType2211</fullName>
        <active>true</active>
        <label>常规工作订单</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordType2212</fullName>
        <active>true</active>
        <label>准分子检查设备</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordType2213</fullName>
        <active>true</active>
        <label>售前支持</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordType223</fullName>
        <active>true</active>
        <label>飞白设备</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordType332</fullName>
        <active>true</active>
        <label>准分子设备</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordType3342</fullName>
        <active>true</active>
        <label>路视设备</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordType665</fullName>
        <active>true</active>
        <label>备用机-准分子</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordType875</fullName>
        <active>true</active>
        <label>欧堡设备</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordType887</fullName>
        <active>true</active>
        <label>备用机-检查设备</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordTypejsfw</fullName>
        <active>true</active>
        <label>技术服务工作单</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordTypesbaz</fullName>
        <active>true</active>
        <label>合同安装单</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>